--- a/requirements.txt
+++ b/requirements.txt
@@ -1,191 +1,65 @@
-absl-py==1.4.0
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1707233003401/work
-array-record==0.4.0
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733175639022/work
-astunparse==1.6.3
-attrs==25.3.0
 audioread==3.0.1
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-bokeh==3.1.1
-cached-property==2.0.1
-cachetools==5.5.2
 certifi==2025.8.3
-cffi==1.17.1
+cffi==2.0.0
 chardet==5.2.0
 charset-normalizer==3.4.3
-chex==0.1.7
-click==8.1.8
-cloudml-hypertune==0.1.0.dev6
-cloudpickle==3.1.1
-comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
-contourpy==1.1.1
-crepe==0.0.16
+contourpy==1.3.3
 cycler==0.12.1
-ddsp==3.2.0
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1722923804757/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-dill==0.4.0
-dm-tree==0.1.8
-dtw-python==1.5.3
-etils==1.3.0
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
-fastBPE==0.1.0
-filelock==3.13.1
-flatbuffers==25.2.10
-flax==0.7.2
-fluidsynth==0.2
-fonttools==4.57.0
-fsspec==2024.6.1
-future==1.0.0
-gast==0.4.0
-gin-config==0.5.0
-google-api-core==2.25.1
-google-auth==2.40.3
-google-auth-oauthlib==1.0.0
-google-cloud-core==2.4.3
-google-cloud-storage==3.4.0
-google-crc32c==1.5.0
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
-grpcio==1.70.0
-h5py==3.11.0
+decorator==5.2.1
+filelock==3.19.1
+fonttools==4.60.0
+fsspec==2025.9.0
 hf-xet==1.1.10
-hmmlearn==0.3.3
 huggingface-hub==0.35.1
 idna==3.10
-imageio==2.35.1
-importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
-importlib_resources==6.4.5
-intervaltree==3.1.0
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1719845458456/work
-ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1683289207929/work
-jax==0.4.13
-jaxlib==0.4.13
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
 Jinja2==3.1.6
-joblib==1.4.2
+joblib==1.5.2
 jsonpickle==4.1.1
-jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
-jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1748333051527/work
-keras==2.13.1
-kiwisolver==1.4.7
+kiwisolver==1.4.9
 lazy_loader==0.4
-libclang==18.1.1
 librosa==0.11.0
-llvmlite==0.41.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.7.5
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
-mdurl==0.1.2
-midi-ddsp==0.2.6
+llvmlite==0.45.0
+MarkupSafe==3.0.2
+matplotlib==3.10.6
 midi2audio==0.1.1
 miditoolkit==1.0.1
 mido==1.3.3
-mir_eval==0.8.2
-ml-dtypes==0.2.0
-more-itertools==10.5.0
+more-itertools==10.8.0
 mpmath==1.3.0
 msgpack==1.1.1
-music21==8.3.0
-nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
-networkx==3.0
-nltk==3.9.1
-note-seq==0.0.5
-numba @ file:///Users/runner/miniforge3/conda-bld/numba_1706149401109/work
-numpy==1.24.3
-oauthlib==3.3.1
+music21==9.7.1
+networkx==3.5
+numba==0.62.0
+numpy==2.3.3
 opensimplex==0.4.5.1
-opt_einsum==3.4.0
-optax==0.1.8
-orbax-checkpoint==0.2.3
-packaging==23.2
-pandas==2.0.3
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-pillow==10.4.0
-platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+packaging==25.0
+pillow==11.3.0
+platformdirs==4.4.0
 pooch==1.8.2
 pretty_midi==0.2.10
-promise==2.3
-prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
-proto-plus==1.26.1
-protobuf==4.25.8
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1719274614789/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybind11==3.0.1
 pycparser==2.23
-pydub==0.25.1
-pyfluidsynth==1.3.4
 pygame==2.6.1
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-PyOpenGL==3.1.10
-PyOpenGL-accelerate==3.1.10
-pyparsing==3.1.4
-pypianoroll==1.0.4
-PyQt6==6.7.1
-PyQt6-Qt6==6.7.3
-PyQt6_sip==13.8.0
-pyqtgraph==0.13.3
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
-pytz==2025.2
-PyYAML==6.0.2
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1724399101064/work
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-resampy==0.4.3
-rich==14.1.0
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.3.2
-scipy==1.10.1
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sortedcontainers==2.4.0
-sounddevice==0.5.2
+pyparsing==3.2.5
+PyQt6==6.9.1
+PyQt6-Qt6==6.9.2
+PyQt6_sip==13.10.2
+pyqtgraph==0.13.7
+python-dateutil==2.9.0.post0
+PyYAML==6.0.3
+regex==2025.9.18
+requests==2.32.5
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+six==1.17.0
 soundfile==0.13.1
-soxr==0.3.7
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
-sympy==1.13.3
-tensorboard==2.13.0
-tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-addons==0.21.0
-tensorflow-datasets==4.9.2
-tensorflow-decision-forests==1.5.0
-tensorflow-estimator==2.13.0
-tensorflow-hub==0.16.1
-tensorflow-macos==2.13.0
-tensorflow-metadata==1.13.1
-tensorflow-probability==0.21.0
-tensorflowjs==4.22.0
-tensorstore==0.1.45
-termcolor==2.4.0
-tf-keras==2.15.0
-tflite-support==0.1.0a1
-threadpoolctl==3.5.0
-tokenizers==0.20.3
-toml==0.10.2
-toolz==1.0.0
-torch==2.4.1
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1717722703965/work
+soxr==1.0.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.8.0
 tqdm==4.67.1
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
-transformers==4.46.3
-typeguard==2.13.3
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata==2025.2
-urllib3==2.2.3
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
-webcolors==24.8.0
-Werkzeug==3.0.6
-wrapt==1.17.3
-wurlitzer==3.1.1
-xyzservices==2025.4.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1731262100163/work
+transformers==4.56.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+webcolors==24.11.1
