--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.3
 contourpy==1.3.3
 cycler==0.12.1
 decorator==5.2.1
+einops
 filelock==3.19.1
 fonttools==4.60.0
 fsspec==2025.9.0
@@ -51,6 +52,7 @@ requests==2.32.5
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
+sentencepiece
 six==1.17.0
 soundfile==0.13.1
 soxr==1.0.0
@@ -58,6 +60,7 @@ sympy==1.14.0
 threadpoolctl==3.6.0
 tokenizers==0.22.1
 torch==2.8.0
+torchvision
 tqdm==4.67.1
 transformers==4.56.2
 typing_extensions==4.15.0
